--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: flutter analyze lib test
 
       - name: Run tests
-        run: flutter test --no-pub --coverage --test-randomize-ordering-seed random packages test
+        run: flutter test --no-pub --coverage test
 
       - name: Build Android App
         run: flutter build apk
