--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,11 @@ jobs:
         run: flutter test --no-pub --coverage test
 
       - name: Build Android Appbundle
-        if: $BUILD_ANDROID
+        if: ${{ BUILD_ANDROID == true}}
         run: flutter build appbundle
 
       - name: Build iOS App
-        if: $BUILD_IOS
+        if: ${{ $BUILD_IOS == true}}
         run: |
             flutter build ios --no-codesign
             cd build/ios/iphoneos
@@ -57,14 +57,14 @@ jobs:
             zip -r app.ipa Payload
 
       - name: Build web
-        if: $BUILD_WEB
+        if: ${{ $BUILD_WEB == true}}
         run: |
           flutter build web
           cd build/web
           zip -r web-app.zip .
 
       - name: Build MacOS
-        if: $BUILD_MACOS
+        if: ${{ $BUILD_MACOS == true}}
         run: |
           flutter config --enable-macos-desktop
           flutter build macos
@@ -83,7 +83,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Windows
-        if: $BUILD_WINDOWS
+        if: ${{ $BUILD_WINDOWS == true}}
         run: |
           flutter config --enable-windows-desktop
           flutter build windows
@@ -102,7 +102,7 @@ jobs:
           run: flutter pub get
 
         - name: Build Linux
-          if: $BUILD_LINUX
+          if: ${{ $BUILD_LINUX == true}}
           run: |
             sudo apt-get update -y
             sudo apt-get install -y ninja-build libgtk-3-dev
@@ -110,7 +110,7 @@ jobs:
             flutter build linux
 
   archive:
-    if: $BUILD_WEB
+    if: ${{ $BUILD_WEB == true}}
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -121,12 +121,11 @@ jobs:
           path: build/web
 
   release:
-    if: $RELEASE
+    if: ${{ $RELEASE == true}}
     needs: [build, archive]
     runs-on: ubuntu-latest
     steps:
       - name: Release Apps
-        if: $RELEASE
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
