--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: flutter test --no-pub --coverage test
 
       - name: Build Android Appbundle
-        if: ${{ BUILD_ANDROID == true}}
+        if: ${{ $BUILD_ANDROID == true}}
         run: flutter build appbundle
 
       - name: Build iOS App
