--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          cache: $CACHE_FLUTTER
+          cache: $env.CACHE_FLUTTER
       - run: flutter --version # print flutter version
 
       - name: Install Packages / Dependencies
@@ -42,11 +42,11 @@ jobs:
         run: flutter test --no-pub --coverage test
 
       - name: Build Android Appbundle
-        if: ${{ $BUILD_ANDROID == true}}
+        if: ${{ env.BUILD_ANDROID == true}}
         run: flutter build appbundle
 
       - name: Build iOS App
-        if: ${{ $BUILD_IOS == true}}
+        if: ${{ env.BUILD_IOS == true}}
         run: |
             flutter build ios --no-codesign
             cd build/ios/iphoneos
@@ -57,14 +57,14 @@ jobs:
             zip -r app.ipa Payload
 
       - name: Build web
-        if: ${{ $BUILD_WEB == true}}
+        if: ${{ env.BUILD_WEB == true}}
         run: |
           flutter build web
           cd build/web
           zip -r web-app.zip .
 
       - name: Build MacOS
-        if: ${{ $BUILD_MACOS == true}}
+        if: ${{ env.BUILD_MACOS == true}}
         run: |
           flutter config --enable-macos-desktop
           flutter build macos
@@ -76,14 +76,14 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          cache: $CACHE_FLUTTER
+          cache: $env.CACHE_FLUTTER
       - run: flutter --version # print flutter version
 
       - name: Install Packages / Dependencies
         run: flutter pub get
 
       - name: Build Windows
-        if: ${{ $BUILD_WINDOWS == true}}
+        if: ${{ env.BUILD_WINDOWS == true}}
         run: |
           flutter config --enable-windows-desktop
           flutter build windows
@@ -95,14 +95,14 @@ jobs:
         - uses: subosito/flutter-action@v2
           with:
             channel: 'stable'
-            cache: $CACHE_FLUTTER
+            cache: $env.CACHE_FLUTTER
         - run: flutter --version # print flutter version
 
         - name: Install Packages / Dependencies
           run: flutter pub get
 
         - name: Build Linux
-          if: ${{ $BUILD_LINUX == true}}
+          if: ${{ env.BUILD_LINUX == true}}
           run: |
             sudo apt-get update -y
             sudo apt-get install -y ninja-build libgtk-3-dev
@@ -110,7 +110,7 @@ jobs:
             flutter build linux
 
   archive:
-    if: ${{ $BUILD_WEB == true}}
+    if: ${{ env.BUILD_WEB == true}}
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -121,7 +121,7 @@ jobs:
           path: build/web
 
   release:
-    if: ${{ $RELEASE == true}}
+    if: ${{ env.RELEASE == true}}
     needs: [build, archive]
     runs-on: ubuntu-latest
     steps:
