--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ on:
       - main
 
 env:
-  CACHE_FLUTTER: ${{ true }} # specify whether flutter should be cached or not
-  BUILD_ANDROID: ${{ true }} # specify whether an android appbundle should be build or should be skipped
-  BUILD_IOS:  ${{ true }}
-  BUILD_WEB:  ${{ true }}
-  BUILD_WINDOWS: ${{ false }}
-  BUILD_LINUX: ${{ false }}
-  BUILD_MACOS: ${{ false }}
-  RELEASE: ${{ false }}
+  CACHE_FLUTTER: true # specify whether flutter should be cached or not
+  BUILD_ANDROID: true # specify whether an android appbundle should be build or should be skipped
+  BUILD_IOS: true
+  BUILD_WEB: true
+  BUILD_WINDOWS: false
+  BUILD_LINUX: false
+  BUILD_MACOS: false
+  RELEASE: false
 
 jobs:
   build:
