--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,11 @@ jobs:
         run: flutter test --no-pub --coverage test
 
       - name: Build Android Appbundle
-        if: ${{ env.BUILD_ANDROID == true}}
+        if: ${{ env.BUILD_ANDROID == 'true'}}
         run: flutter build appbundle
 
       - name: Build iOS App
-        if: ${{ env.BUILD_IOS == true}}
+        if: ${{ env.BUILD_IOS == 'true'}}
         run: |
             flutter build ios --no-codesign
             cd build/ios/iphoneos
@@ -57,14 +57,14 @@ jobs:
             zip -r app.ipa Payload
 
       - name: Build web
-        if: ${{ env.BUILD_WEB == true}}
+        if: ${{ env.BUILD_WEB == 'true'}}
         run: |
           flutter build web
           cd build/web
           zip -r web-app.zip .
 
       - name: Build MacOS
-        if: ${{ env.BUILD_MACOS == true}}
+        if: ${{ env.BUILD_MACOS == 'true'}}
         run: |
           flutter config --enable-macos-desktop
           flutter build macos
@@ -83,7 +83,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Windows
-        if: ${{ env.BUILD_WINDOWS == true}}
+        if: ${{ env.BUILD_WINDOWS == 'true'}}
         run: |
           flutter config --enable-windows-desktop
           flutter build windows
@@ -102,7 +102,7 @@ jobs:
           run: flutter pub get
 
         - name: Build Linux
-          if: ${{ env.BUILD_LINUX == true}}
+          if: ${{ env.BUILD_LINUX == 'true'}}
           run: |
             sudo apt-get update -y
             sudo apt-get install -y ninja-build libgtk-3-dev
@@ -114,7 +114,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Archive Production Artifact (WEB)
-        if: ${{ env.BUILD_WEB == true}}
+        if: ${{ env.BUILD_WEB == 'true'}}
         uses: actions/upload-artifact@master
         with:
           name: web
@@ -125,7 +125,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Release Apps
-        if: ${{ env.RELEASE == true}}
+        if: ${{ env.RELEASE == 'true'}}
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
