--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   CACHE_FLUTTER: true # specify whether flutter should be cached or not
-  BUILD_ANDROID: true # specify whether an android appbundle should be build or should be skipped
-  BUILD_IOS: true
+  BUILD_ANDROID: false # specify whether an android appbundle should be build or should be skipped
+  BUILD_IOS: false
   BUILD_WEB: true
   BUILD_WINDOWS: false
   BUILD_LINUX: false
@@ -63,6 +63,13 @@ jobs:
           cd build/web
           zip -r web-app.zip .
 
+      - name: Archive Web Production Artifact
+        if: ${{ env.BUILD_WEB == 'true'}}
+        uses: actions/upload-artifact@master
+        with:
+          name: web
+          path: build/web
+
       - name: Build MacOS
         if: ${{ env.BUILD_MACOS == 'true'}}
         run: |
@@ -108,17 +115,6 @@ jobs:
             sudo apt-get install -y ninja-build libgtk-3-dev
             flutter config --enable-windows-desktop
             flutter build linux
-
-  archive:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Archive Production Artifact (WEB)
-        if: ${{ env.BUILD_WEB == 'true'}}
-        uses: actions/upload-artifact@master
-        with:
-          name: web
-          path: build/web
 
   release:
     needs: [build, archive]
