--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,8 @@ env:
   RELEASE: false
 
 jobs:
-  build:
-    # build for iOS requires macOS underneath
-    runs-on: macos-latest
-
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
@@ -37,13 +35,48 @@ jobs:
         run: flutter analyze lib test
 
       - name: Run tests including coverage
-        # since packages has already been installed, --no-pub is used
-        # --coverage collects code coverage of tests
         run: flutter test --no-pub --coverage test
+
+      - name: Build Linux
+        if: ${{ env.BUILD_LINUX == 'true'}}
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+          flutter config --enable-windows-desktop
+          flutter build linux
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
         run: flutter build appbundle
+
+      - name: Build web
+        if: ${{ env.BUILD_WEB == 'true'}}
+        run: |
+         flutter build web
+         cd build/web
+         zip -r web-app.zip .
+
+      - name: Archive Web Production Artifact
+        if: ${{ env.BUILD_WEB == 'true'}}
+        uses: actions/upload-artifact@master
+          with:
+            name: web
+            path: build/web
+
+
+  build-macos:
+    if: ${{ env.BUILD_IOS == 'true' || env.BUILD_MACOS == 'true' }}
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: $env.CACHE_FLUTTER
+      - run: flutter --version # print flutter version
+
+      - name: Install Packages / Dependencies
+        run: flutter pub get
 
       - name: Build iOS App
         if: ${{ env.BUILD_IOS == 'true'}}
@@ -56,20 +89,6 @@ jobs:
             cd ..
             zip -r app.ipa Payload
 
-      - name: Build web
-        if: ${{ env.BUILD_WEB == 'true'}}
-        run: |
-          flutter build web
-          cd build/web
-          zip -r web-app.zip .
-
-      - name: Archive Web Production Artifact
-        if: ${{ env.BUILD_WEB == 'true'}}
-        uses: actions/upload-artifact@master
-        with:
-          name: web
-          path: build/web
-
       - name: Build MacOS
         if: ${{ env.BUILD_MACOS == 'true'}}
         run: |
@@ -77,6 +96,7 @@ jobs:
           flutter build macos
 
   build-windows:
+    if: ${{ env.BUILD_WINDOWS == 'true' }}
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -95,29 +115,9 @@ jobs:
           flutter config --enable-windows-desktop
           flutter build windows
 
-  build-linux:
-    runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v2
-        - uses: subosito/flutter-action@v2
-          with:
-            channel: 'stable'
-            cache: $env.CACHE_FLUTTER
-        - run: flutter --version # print flutter version
-
-        - name: Install Packages / Dependencies
-          run: flutter pub get
-
-        - name: Build Linux
-          if: ${{ env.BUILD_LINUX == 'true'}}
-          run: |
-            sudo apt-get update -y
-            sudo apt-get install -y ninja-build libgtk-3-dev
-            flutter config --enable-windows-desktop
-            flutter build linux
 
   release:
-    needs: [build]
+    needs: [build-macos, build-linux, build-windows]
     runs-on: ubuntu-latest
     steps:
       - name: Release Apps
