--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,10 @@ jobs:
 
 
   build-macos:
-    if: ${{ env.BUILD_IOS == 'true' || env.BUILD_MACOS == 'true' }}
+    if: |
+      ${{ env.BUILD_IOS == 'true' 
+        || env.BUILD_MACOS == 'true' 
+        }}
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
