--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: Build and deploy Flutter apps
 
-# runs on every push on branch main
-# TODO: analyze and test should run on other branches too
 on:
   push:
     branches:
@@ -9,12 +7,12 @@ on:
 
 env:
   CACHE_FLUTTER: true # specify whether flutter should be cached or not
-  BUILD_ANDROID: false # specify whether an android appbundle should be build or should be skipped
-  BUILD_IOS: false
+  BUILD_ANDROID: true # specify whether an android appbundle should be build or should be skipped
+  BUILD_IOS: true
   BUILD_WEB: true
-  BUILD_WINDOWS: false
-  BUILD_LINUX: false
-  BUILD_MACOS: false
+  BUILD_WINDOWS: true
+  BUILD_LINUX: true
+  BUILD_MACOS: true
   RELEASE: false
 
 jobs:
@@ -44,12 +42,20 @@ jobs:
           sudo apt-get install -y ninja-build libgtk-3-dev
           flutter config --enable-windows-desktop
           flutter build linux
+      # TODO: Archive Linux
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
         run: flutter build appbundle
 
-      - name: Build web
+      - name: Archive Android Production Artifact
+        if: ${{ env.BUILD_ANDROID == 'true'}}
+        uses: actions/upload-artifact@master
+          with:
+            name: android
+            path: build/app/outputs/**/*.aab
+
+      - name: Build Web
         if: ${{ env.BUILD_WEB == 'true'}}
         run: |
          flutter build web
@@ -88,11 +94,19 @@ jobs:
             cd ..
             zip -r app.ipa Payload
 
+      - name: Archive iOS Production Artifact
+        if: ${{ env.BUILD_IOS == 'true'}}
+        uses: actions/upload-artifact@master
+        with:
+          name: ios
+          path: build/ios/iphoneos/app.ipa
+
       - name: Build MacOS
         if: ${{ env.BUILD_MACOS == 'true'}}
         run: |
           flutter config --enable-macos-desktop
-          flutter build macos
+          flutter build macos --release
+      # TODO: Archive MacOS
 
   build-windows:
     runs-on: windows-latest
@@ -112,6 +126,7 @@ jobs:
         run: |
           flutter config --enable-windows-desktop
           flutter build windows
+      # TODO: Archive Windows
 
 
   release:
