--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
   BUILD_WEB: true
   BUILD_WINDOWS: true
   BUILD_LINUX: true
-  BUILD_MACOS: true
+  BUILD_MACOS: false
   RELEASE: false
 
 jobs:
@@ -40,7 +40,7 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y ninja-build libgtk-3-dev
-          flutter config --enable-windows-desktop
+          flutter config --enable-linux-desktop
           flutter build linux
       # TODO: Archive Linux
 
@@ -106,6 +106,7 @@ jobs:
         run: |
           flutter config --enable-macos-desktop
           flutter build macos --release
+        continue-on-error: true
       # TODO: Archive MacOS
 
   build-windows:
