--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ env:
   BUILD_ANDROID: true # specify whether an android appbundle should be build or should be skipped
   BUILD_IOS: true
   BUILD_WEB: true
-  BUILD_WINDOWS: true
-  BUILD_LINUX: true
+  BUILD_WINDOWS: false
+  BUILD_LINUX: false
   BUILD_MACOS: false
   RELEASE: false
 
@@ -42,6 +42,7 @@ jobs:
           sudo apt-get install -y ninja-build libgtk-3-dev
           flutter config --enable-linux-desktop
           flutter build linux
+        continue-on-error: true
       # TODO: Archive Linux
 
       - name: Build Android Appbundle
@@ -127,6 +128,7 @@ jobs:
         run: |
           flutter config --enable-windows-desktop
           flutter build windows
+       continue-on-error: true
       # TODO: Archive Windows
 
 
