--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
-        run: flutter build apk --release --no-pub
+        run: flutter build apk --flavor app1 --release --no-pub
 
       - name: Sign Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
