--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,6 +73,12 @@ android {
             versionNameSuffix "-App2"
             applicationId "com.example.myapp.app2"
         }
+        app3 {
+            dimension "app"
+            resValue "string", "app_name", "Demo App Flavor3"
+            versionNameSuffix "-App3"
+            applicationId "com.example.myapp.app3"
+        }
     }
 
     lintOptions {
