--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Flutter apps
+name: Continuous Practice Pipeline for Flutter
 
 on:
   push:
@@ -6,17 +6,13 @@ on:
       - main
 
 env:
-  CACHE_FLUTTER: true # specify whether flutter should be cached or not
-  BUILD_ANDROID: true # specify whether an android appbundle should be build or should be skipped
+  APP_NAME: app3
+  CACHE_FLUTTER: true
+  BUILD_ANDROID: true
   BUILD_IOS: true
-  BUILD_WEB: false
-  BUILD_WINDOWS: false
-  BUILD_LINUX: false
-  BUILD_MACOS: false
-  RELEASE: false
 
 jobs:
-  build-linux:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +20,7 @@ jobs:
         with:
           channel: 'stable'
           cache: $env.CACHE_FLUTTER
-      - run: flutter --version # print flutter version
+      - run: flutter --version
 
       - name: Clean
         run: flutter clean
@@ -38,19 +34,22 @@ jobs:
       - name: Run tests including coverage
         run: flutter test --no-pub --coverage test
 
-      - name: Build Linux
-        if: ${{ env.BUILD_LINUX == 'true'}}
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev
-          flutter config --enable-linux-desktop
-          flutter build linux
-        continue-on-error: true
-      # TODO: Archive Linux
+  build-android:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: $env.CACHE_FLUTTER
+      - run: flutter --version
+
+      - name: Install Packages / Dependencies
+        run: flutter pub get
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
-        run: flutter build apk --flavor app3 --release --no-pub
+        run: flutter build apk --flavor ${{ env.APP_NAME }} --release --no-pub
 
       - name: Sign Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
@@ -70,23 +69,7 @@ jobs:
             name: android
             path: ${{ steps.android_sign.outputs.signedReleaseFile }}
 
-      - name: Build Web
-        if: ${{ env.BUILD_WEB == 'true'}}
-        run: |
-         flutter build web
-         cd build/web
-         zip -r web-app.zip .
-
-      - name: Archive Web Production Artifact
-        if: ${{ env.BUILD_WEB == 'true'}}
-        uses: actions/upload-artifact@master
-        with:
-            name: web
-            path: build/web
-
-
   build-macos:
-    if: true
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -94,7 +77,7 @@ jobs:
         with:
           channel: 'stable'
           cache: $env.CACHE_FLUTTER
-      - run: flutter --version # print flutter version
+      - run: flutter --version
 
       - name: Install Packages / Dependencies
         run: flutter pub get
@@ -102,7 +85,7 @@ jobs:
       - name: Build iOS App
         if: ${{ env.BUILD_IOS == 'true'}}
         run: |
-            flutter build ios --no-codesign --flavor app3
+            flutter build ios --no-codesign --flavor ${{ env.APP_NAME }}
             cd build/ios/iphoneos
             mkdir Payload
             cd Payload
@@ -116,46 +99,3 @@ jobs:
         with:
           name: ios
           path: build/ios/iphoneos/app.ipa
-
-      - name: Build MacOS
-        if: ${{ env.BUILD_MACOS == 'true'}}
-        run: |
-          flutter config --enable-macos-desktop
-          flutter build macos --release
-        continue-on-error: true
-      # TODO: Archive MacOS
-
-  build-windows:
-    if: false
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          cache: $env.CACHE_FLUTTER
-      - run: flutter --version # print flutter version
-
-      - name: Install Packages / Dependencies
-        run: flutter pub get
-
-      - name: Build Windows
-        if: ${{ env.BUILD_WINDOWS == 'true'}}
-        run: |
-          flutter config --enable-windows-desktop
-          flutter build windows
-        continue-on-error: true
-      # TODO: Archive Windows
-
-
-  release:
-    if: false
-    needs: [build-macos, build-linux, build-windows]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Release Apps
-        if: ${{ env.RELEASE == 'true'}}
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: 'build/app/outputs/**/*.apk,build/ios/iphoneos/app.ipa,build/web/web-app.zip'
