--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         run: flutter test --no-pub --coverage test
 
   build-android:
+    if: false
     needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -113,6 +114,12 @@ jobs:
           cache: $env.CACHE_FLUTTER
       - run: flutter --version
 
+
+      - uses: actions/download-artifact@v3
+        with:
+           name: app.ipa
+           path: build/ios/iphoneos
+
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
         with:
@@ -123,6 +130,7 @@ jobs:
 
 
   deploy-android:
+    if: false
     needs: [build-android]
     runs-on: ubuntu-latest
     steps:
