--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapp">
+    package="de.carsten_vogel.flutter.pipeline.demo">
    <application
         android:label="myapp"
         android:name="${applicationName}"
