--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "de.carsten_vogel" "\0"
             VALUE "FileDescription", "myapp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "myapp" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 de.carsten_vogel. All rights reserved." "\0"
             VALUE "OriginalFilename", "myapp.exe" "\0"
             VALUE "ProductName", "myapp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
