--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,14 +51,14 @@ jobs:
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
-        run: flutter build apk --flavor ${{ env.APP_NAME }} --release --no-pub
+        run: flutter build appbundle --flavor ${{ env.APP_NAME }} --release --no-pub
 
       - name: Sign Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
         id: android_sign
         uses: r0adkll/sign-android-release@v1
         with:
-          releaseDirectory: build/app/outputs/flutter-apk/
+          releaseDirectory: build/app/outputs/bundle/
           signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
           alias: ${{ secrets.ANDROID_ALIAS }}
           keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
@@ -81,7 +81,7 @@ jobs:
         with:
           serviceAccountJson: service_account.json
           packageName: de.carsten_vogel.flutter.pipeline.demo
-          releaseFile: build/app/outputs/flutter-apk/app-app1-release.apk
+          releaseFile: build/app/outputs/bundle/app-app1-release.aab
           track: beta
 
   build-ios:
