--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
-        run: flutter build appbundle --flavor ${{ env.APP_NAME }} --release --no-pub
+        run: flutter build appbundle --flavor ${{ env.APP_NAME }} --release --no-pub --stacktrace
 
       - name: Sign Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
