--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build Android Appbundle
         if: ${{ env.BUILD_ANDROID == 'true'}}
-        run: flutter build appbundle --flavor ${{ env.APP_NAME }} --release --no-pub
+        run: flutter build appbundle --flavor ${{ env.APP_NAME }} --release --no-pub --verbose
 
       #- name: Sign Android Appbundle
       #  if: ${{ env.BUILD_ANDROID == 'true'}}
