--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
+            storeFile rootProject.file('flutterCICDkeystore.jks')
             storePassword keystoreProperties['storePassword']
         }
     }
