--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
             name: android
-            path: ${{ steps.android_sign.outputs.signedReleaseFile }}
+            path: build/app/outputs/bundle/app1Release/app-app1-release.aab  # ${{ steps.android_sign.outputs.signedReleaseFile }}
 
       - name: Create service_account.json
         id: createServiceAccount
@@ -86,7 +86,7 @@ jobs:
         with:
           serviceAccountJson: service_account.json
           packageName: de.carsten_vogel.flutter.pipeline.demo
-          releaseFile: build/app/outputs/bundle/app-app1-release.aab
+          releaseFile: build/app/outputs/bundle/app1Release/app-app1-release.aab
           track: beta
 
   build-ios:
