--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile rootProject.file('flutterCICDkeystore.jks')
+            storeFile rootProject.file('flutterCICDkeystore.jks') // TODO: fix this to keystore properties
             storePassword keystoreProperties['storePassword']
         }
     }
