--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
-          packageName: de.carsten_vogel.flutter.pipeline.demo
+          packageName: de.carsten_vogel.flutter.pipeline.demo.app1
           releaseFile: build/app/outputs/bundle/app1Release/app-app1-release.aab
           track: beta
 
