CI CD Pipeline for Android

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
           serviceAccountJson: service_account.json
           packageName: de.carsten_vogel.flutter.pipeline.demo.app1
           releaseFile: build/app/outputs/bundle/app1Release/app-app1-release.aab
-          track: beta
+          track: internal
 
   build-ios:
     if: false
