--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           serviceAccountJson: service_account.json
           packageName: de.carsten_vogel.flutter.pipeline.demo.app1
-          releaseFile: build/app/outputs/bundle/app1Release/app-app1-release.aab
+          releaseFiles: build/app/outputs/bundle/app1Release/app-app1-release.aab
           track: internal
           status: draft
 
