--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         id: deploy
         uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJson: service_account_key.json
+          serviceAccountJson: ./android/service_account_key.json
           packageName: ${{ secrets.ANDROID_PACKAGE_NAME}}.${{ env.APP_NAME }}
           releaseFiles: build/app/outputs/bundle/app1Release/app-app1-release.aab
           track: internal
