--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -94,6 +94,7 @@ jobs:
         with:
           ruby-version: '3.0'
           bundler-cache: true
+      - run: gem install bundler:1.17.2
       - uses: maierj/fastlane-action@v3.0.0
         with:
           lane: 'deploy'
