--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -88,7 +88,7 @@ jobs:
         uses: "finnp/create-file-action@master"
         env:
           FILE_NAME: "./android/fastlane/Appfile"
-          FILE_DATA: "json_key_file(\"service_account_key.json\")\npackage_name(\"${{ secrets.ANDROID_PACKAGE_NAME}}.${{ env.APP_NAME }}\")"
+          FILE_DATA: 'json_key_file("service_account_key.json")'
 
       - uses: ruby/setup-ruby@v1
         with:
