--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -84,11 +84,11 @@ jobs:
           name: android
           path: build/app/outputs/bundle/${{ env.APP_NAME }}Release/app-${{ env.APP_NAME }}-release.aab
 
-      - name: Create AppFile
-        uses: "finnp/create-file-action@master"
-        env:
-          FILE_NAME: "./android/fastlane/Appfile"
-          FILE_DATA: 'json_key_file("service_account_key.json")'
+      #- name: Create AppFile
+      #  uses: "finnp/create-file-action@master"
+      #  env:
+       #   FILE_NAME: "./android/fastlane/Appfile"
+      #    FILE_DATA: 'json_key_file("service_account_key.json")'
 
       - uses: ruby/setup-ruby@v1
         with:
