--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - fastlane
+      - fastlane_automate_screenshots
 
 env:
   APP_NAME: app1
@@ -45,6 +46,12 @@ jobs:
 
       - name: Analyze Dart Code
         run: flutter analyze lib test
+
+      - name: Create Goldens
+        run: flutter test --update-goldens
+
+      - name: Copy Images
+        run: cp ./lib/test/goldens/*android* ./android/fastlane/metadata/android/en-US/images/phoneScreenshots
 
       - name: Run Tests Including Coverage
         run: flutter test --no-pub --coverage test
