--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -54,6 +54,9 @@ jobs:
         run: ls -1 /home/runner/work/Flutter-CI-CD/Flutter-CI-CD/test/goldens/*android*.png |
           xargs -L1 -I{} cp {} ./android/fastlane/metadata/android/en-US/images/phoneScreenshots
 
+      - name: List images
+        run: ls ./android/fastlane/metadata/android/en-US/images/phoneScreenshots
+
       - name: Run Tests Including Coverage
         run: flutter test --no-pub --coverage test
 
